chore: changes after rebasing

--- a/reference/simple-calc/MVU-X-CSharp/SimpleCalculator.Wasm/SimpleCalculator.Wasm.csproj
+++ b/reference/simple-calc/MVU-X-CSharp/SimpleCalculator.Wasm/SimpleCalculator.Wasm.csproj
@@ -62,4 +62,8 @@
 		<ProjectReference Include="..\SimpleCalculator\SimpleCalculator.csproj" />
 	</ItemGroup>
 	<Import Project="../SimpleCalculator.Base/base.props" />
+
+	<ItemGroup>
+		<PackageReference Update="Microsoft.Net.Compilers.Toolset" Version="4.4.0" />
+	</ItemGroup>
 </Project>
