--- a/reference/simple-calc/MVU-X-Xaml/SimpleCalculator.Wasm/SimpleCalculator.Wasm.csproj
+++ b/reference/simple-calc/MVU-X-Xaml/SimpleCalculator.Wasm/SimpleCalculator.Wasm.csproj
@@ -56,11 +56,15 @@
 		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="8.0.0-dev.77" />
 		<PackageReference Include="Uno.WinUI.WebAssembly" Version="4.7.37" />
 		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.37" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.30" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.37" />
 		<PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\SimpleCalculator\SimpleCalculator.csproj" />
 	</ItemGroup>
 	<Import Project="../SimpleCalculator.Base/base.props" />
+
+	<ItemGroup>
+		<PackageReference Update="Microsoft.Net.Compilers.Toolset" Version="4.4.0" />
+	</ItemGroup>
 </Project>
