--- a/reference/simple-calc/MVU-X-CSharp/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
+++ b/reference/simple-calc/MVU-X-CSharp/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
@@ -25,18 +25,19 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Uno.Extensions.Markup.WinUI" Version="1.0.0-dev.169" />
-		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.628" />
-		<PackageReference Include="Uno.Extensions.Toolkit.WinUI" Version="2.3.0-dev.628" />
-		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.15" />
-		<PackageReference Include="Uno.Material.WinUI.Markup" Version="2.5.0-dev.15" />
-		<PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.5.0-dev.21" />
+		<PackageReference Include="Uno.Extensions.Markup.WinUI" Version="1.0.0-dev.180" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.678" />
+		<PackageReference Include="Uno.Extensions.Toolkit.WinUI" Version="2.3.0-dev.678" />
+		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.19" />
+		<PackageReference Include="Uno.Material.WinUI.Markup" Version="2.5.0-dev.19" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.5.0-dev.23" />
 		<PackageReference Include="Uno.WinUI.Markup" Version="4.7.0-dev.18" />
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230118.102" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.37" />
+		<PackageReference Include="Uno.WinUI" Version="4.7.37" />
 	</ItemGroup>
 
 	<ItemGroup>
