--- a/reference/simple-calc/MVU-X-CSharp/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/simple-calc/MVU-X-CSharp/SimpleCalculator/SimpleCalculator.csproj
@@ -12,14 +12,14 @@
 	</PropertyGroup>
 	
 	<ItemGroup>
-		<PackageReference Include="Uno.Extensions.Markup.WinUI" Version="1.0.0-dev.169" />
-		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.628" />
-		<PackageReference Include="Uno.Extensions.Toolkit.WinUI" Version="2.3.0-dev.628" />
-		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.15" />
-		<PackageReference Include="Uno.Material.WinUI.Markup" Version="2.5.0-dev.15" />
-		<PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.5.0-dev.21" />
+		<PackageReference Include="Uno.Extensions.Markup.WinUI" Version="1.0.0-dev.180" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.678" />
+		<PackageReference Include="Uno.Extensions.Toolkit.WinUI" Version="2.3.0-dev.678" />
+		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.19" />
+		<PackageReference Include="Uno.Material.WinUI.Markup" Version="2.5.0-dev.19" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.5.0-dev.23" />
 		<PackageReference Include="Uno.WinUI.Markup" Version="4.7.0-dev.18" />
-		<PackageReference Include="Uno.Themes.WinUI.Markup" Version="2.5.0-dev.15" />
+		<PackageReference Include="Uno.Themes.WinUI.Markup" Version="2.5.0-dev.19" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Uno.WinUI" Version="4.7.37" />
 	</ItemGroup>
@@ -65,8 +65,7 @@
 	  <Compile Include="..\SimpleCalculator.Base\IsExternalInit.cs" Visible="false" />
 	</ItemGroup>
 
-	<Import Project="..\..\resources\shared-resources.targets"
-			Condition="Exists('..\..\resources\shared-resources.targets')" />
+	<Import Project="..\..\resources\shared-resources.targets" Condition="Exists('..\..\resources\shared-resources.targets')" />
 
 	<ItemGroup>
 	  <PackageReference Update="Microsoft.Net.Compilers.Toolset" Version="4.4.0" />
