--- a/reference/simple-calc/MVU-X-Xaml/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/simple-calc/MVU-X-Xaml/SimpleCalculator/SimpleCalculator.csproj
@@ -15,9 +15,9 @@
 	</PropertyGroup>
 	
 	<ItemGroup>
-		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.628" />
-		<PackageReference Include="Uno.Extensions.Toolkit.WinUI" Version="2.3.0-dev.628" />
-		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.15" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.678" />
+		<PackageReference Include="Uno.Extensions.Toolkit.WinUI" Version="2.3.0-dev.678" />
+		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.19" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Uno.WinUI" Version="4.7.37" />
 	</ItemGroup>
@@ -63,8 +63,7 @@
 	  <Compile Include="..\SimpleCalculator.Base\IsExternalInit.cs" Visible="false" />
 	</ItemGroup>
 
-	<Import Project="..\..\resources\shared-resources.targets"
-			Condition="Exists('..\..\resources\shared-resources.targets')" />
+	<Import Project="..\..\resources\shared-resources.targets" Condition="Exists('..\..\resources\shared-resources.targets')" />
 
 	<ItemGroup>
 	  <PackageReference Update="Microsoft.Net.Compilers.Toolset" Version="4.4.0" />
