--- a/UI/UnoWCTDataGridSample/WCTTestbed2/WCTTestbed2.Wasm/WCTTestbed2.Wasm.csproj
+++ b/UI/UnoWCTDataGridSample/WCTTestbed2/WCTTestbed2.Wasm/WCTTestbed2.Wasm.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <NoWarn>NU1701</NoWarn>
 		
 	</PropertyGroup>
@@ -12,16 +12,22 @@
     <DebugSymbols>true</DebugSymbols>
     <!--
 		IL Linking is disabled in Debug configuration.
-		When building in Release, see https://platform.uno/docs/articles/features/using-il-linker-webassembly.html
+		When building in Release, see https://aka.platform.uno/wasm-il-linker
 		-->
     <WasmShellILLinkerEnabled>false</WasmShellILLinkerEnabled>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)'=='Release'">
+    <!-- XAML Resource trimming https://aka.platform.uno/xaml-trimming -->
+    <!--<UnoXamlResourcesTrimming>true</UnoXamlResourcesTrimming>-->
+    <!-- Improve performance with AOT builds https://aka.platform.uno/wasm-aot -->
+    <!-- <WasmShellMonoRuntimeExecutionMode>InterpreterAndAOT</WasmShellMonoRuntimeExecutionMode> -->
+    <!-- Temporarily uncomment to generate an AOT profile https://aka.platform.uno/wasm-aot-profile -->
+    <!-- <WasmShellGenerateAOTProfile>true</WasmShellGenerateAOTProfile> -->
+  </PropertyGroup>
   <ItemGroup>
     <Content Include="Assets\SplashScreen.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <UpToDateCheckInput Include="..\WCTTestbed2.Shared\**\*.xaml" />
-  </ItemGroup>
+		
+	</ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="WasmCSS\Fonts.css" />
     <EmbeddedResource Include="WasmScripts\AppManifest.js" />
@@ -41,16 +47,18 @@
     <None Include="wwwroot\web.config" />
   </ItemGroup>
   <ItemGroup>
-	<PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Controls" Version="7.1.100" />
-	<PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Controls.DataGrid" Version="7.1.100" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />    
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
     <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
-    <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.6.39" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.39" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.39" />
+    <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.7.37" />
+    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.37" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.37" />
     <PackageReference Include="Uno.Wasm.Bootstrap" Version="7.0.11" />
     <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.11" />
-    <PackageReference Include="Uno.WinUI.Lottie" Version="4.6.39" />
+    <PackageReference Include="Uno.WinUI.Lottie" Version="4.7.37" />
   </ItemGroup>
-  <Import Project="..\WCTTestbed2.Shared\WCTTestbed2.Shared.projitems" Label="Shared" Condition="Exists('..\WCTTestbed2.Shared\WCTTestbed2.Shared.projitems')" />
+  <ItemGroup>
+    <ProjectReference Include="..\WCTTestbed2\WCTTestbed2.csproj" />
+  </ItemGroup>
+  <Import Project="..\WCTTestbed2.Base\base.props" />
 </Project>
