--- a/.vsts-ci.canaries.yml
+++ b/.vsts-ci.canaries.yml
@@ -18,3 +18,6 @@ steps:
     packageAuthor: 'nventive,Uno Platform'
     summaryFile: '$(Build.ArtifactStagingDirectory)/Summary.md'
     resultFile: '$(Build.ArtifactStagingDirectory)/Results.json'
+
+- pwsh: |
+    del Uno.Samples.generated.sln
