--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -42,7 +42,7 @@ jobs:
            # Only build if there a change in the solution path for the current PR, if we're not in a PR
            if( ('$env:System_PullRequest_PullRequestId)' -eq '') -or ($global:LASTEXITCODE -ne 0)) {
 
-                & $env:msbuildpath $SolutionName /r /p:Configuration=Release /p:AotAssemblies=false /p:WasmShellILLinkerEnabled=false /ds ;
+                & $env:msbuildpath $SolutionName /r /p:Configuration=Release /p:AotAssemblies=false /p:PublishTrimmed=false /p:WasmShellILLinkerEnabled=false /ds ;
 
                 if (($lastexitcode -ne 0)) {
                     exit $lastexitcode
