--- a/.azure-pipelines.BuildMatrix.yml
+++ b/.azure-pipelines.BuildMatrix.yml
@@ -8,119 +8,119 @@ jobs:
     matrix:
       #$json="{'job1': {'Work': '**\AdvancedXBind.sln'}, 'job2': {'Work': '**\AndroidCustomCamera.sln'}}"
 
-    AdvancedXBind:
-      sampleName: '**\AdvancedXBind.sln'
+    # AdvancedXBind:
+    #   sampleName: '**\AdvancedXBind.sln'
 
-    AndroidCustomCamera:
-      sampleName: '**\AndroidCustomCamera.sln'
+    # AndroidCustomCamera:
+    #   sampleName: '**\AndroidCustomCamera.sln'
 
-    Authentication.OidcDemo:
-      sampleName: '**\Authentication.OidcDemo.sln'
+    # Authentication.OidcDemo:
+    #   sampleName: '**\Authentication.OidcDemo.sln'
 
-    AutoSuggestSample:
-      sampleName: '**\AutoSuggestSample.sln'
+    # AutoSuggestSample:
+    #   sampleName: '**\AutoSuggestSample.sln'
       
-    Benchmark:
-      sampleName: '**\AppBenchmark.sln'
+    # Benchmark:
+    #   sampleName: '**\AppBenchmark.sln'
 
-    UnoBluetoothExplorer:
-      sampleName: '**\UnoBluetoothExplorer.sln'
+    # UnoBluetoothExplorer:
+    #   sampleName: '**\UnoBluetoothExplorer.sln'
     
-    CameraCaptureUISample:
-      sampleName: '**\CameraCaptureUISample.sln'
+    # CameraCaptureUISample:
+    #   sampleName: '**\CameraCaptureUISample.sln'
 
-    CardViewMigration:
-      sampleName: '**\CardViewMigration.sln'
+    # CardViewMigration:
+    #   sampleName: '**\CardViewMigration.sln'
 
-    ChatSignalR:
-      sampleName: '**\ChatSignalR.sln'
+    # ChatSignalR:
+    #   sampleName: '**\ChatSignalR.sln'
 
-    ControlLibrary:
-      sampleName: '**\ControlLibrary.sln'
+    # ControlLibrary:
+    #   sampleName: '**\ControlLibrary.sln'
 
-    CustomSorting:
-      sampleName: '**\CustomSorting.sln'
+    # CustomSorting:
+    #   sampleName: '**\CustomSorting.sln'
       
-    DualScreenSample:
-      sampleName: '**\DualScreenSample.sln'
+    # DualScreenSample:
+    #   sampleName: '**\DualScreenSample.sln'
 
-    EFCoreSQLiteSample:
-      sampleName: '**\EFCoreSQLiteSample.sln'
+    # EFCoreSQLiteSample:
+    #   sampleName: '**\EFCoreSQLiteSample.sln'
 
-    EmbeddedResourcesSample:
-      sampleName: '**\EmbeddedResourcesSample.sln'
+    # EmbeddedResourcesSample:
+    #   sampleName: '**\EmbeddedResourcesSample.sln'
 
-    FileSavePickeriOS:
-      sampleName: '**\FileSavePickeriOS.sln'
+    # FileSavePickeriOS:
+    #   sampleName: '**\FileSavePickeriOS.sln'
 
-    FoodDeliveryUI:
-      sampleName: '**\FoodDeliveryUI.sln'
+    # FoodDeliveryUI:
+    #   sampleName: '**\FoodDeliveryUI.sln'
 
-    HtmlControls:
-      sampleName: '**\HtmlControls.sln'
+    # HtmlControls:
+    #   sampleName: '**\HtmlControls.sln'
 
-    InsertingSeparators:
-      sampleName: '**\InsertingSeparators.sln'
+    # InsertingSeparators:
+    #   sampleName: '**\InsertingSeparators.sln'
 
-    LiteDB:
-      sampleName: '**\LiteDBSample.sln'
+    # LiteDB:
+    #   sampleName: '**\LiteDBSample.sln'
 
-    Localization:
-      sampleName: '**\Localization\UnoLocalization.sln'
+    # Localization:
+    #   sampleName: '**\Localization\UnoLocalization.sln'
 
-    RuntimeCultureSwitching:
-      sampleName: '**\RuntimeCultureSwitching\UnoLocalization.sln'
+    # RuntimeCultureSwitching:
+    #   sampleName: '**\RuntimeCultureSwitching\UnoLocalization.sln'
 
-    MapControlSample:
-      sampleName: '**\MapControlSample.sln'
+    # MapControlSample:
+    #   sampleName: '**\MapControlSample.sln'
 
-    MvuxHowTos:
-      sampleName: '**\MvuxHowTos.sln'
+    # MvuxHowTos:
+    #   sampleName: '**\MvuxHowTos.sln'
 
-    NativeFrameNav:
-      sampleName: '**\NativeFrameNav.sln'
+    # NativeFrameNav:
+    #   sampleName: '**\NativeFrameNav.sln'
 
-    NativeStylesSwitch:
-      sampleName: '**\NativeStylesSwitch.sln'
+    # NativeStylesSwitch:
+    #   sampleName: '**\NativeStylesSwitch.sln'
 
-    OnnxSamples:
-      sampleName: '**\OnnxSamples.sln'     
+    # OnnxSamples:
+    #   sampleName: '**\OnnxSamples.sln'     
 
-    PackageResources:
-      sampleName: '**\PackageResourcesSample.sln'     
+    # PackageResources:
+    #   sampleName: '**\PackageResourcesSample.sln'     
 
-    PetAdoptUI:
-      sampleName: '**\PetAdoptUI.sln'     
+    # PetAdoptUI:
+    #   sampleName: '**\PetAdoptUI.sln'     
 
-    SkiaSharpTest:
-      sampleName: '**\SkiaSharpTest.sln'     
+    # SkiaSharpTest:
+    #   sampleName: '**\SkiaSharpTest.sln'     
 
-    SkottieSample:
-      sampleName: '**\SkottieSample.sln'     
+    # SkottieSample:
+    #   sampleName: '**\SkottieSample.sln'     
 
-    SplashScreenSample:
-      sampleName: '**\SplashScreenSample.sln'     
+    # SplashScreenSample:
+    #   sampleName: '**\SplashScreenSample.sln'     
 
-    SQLiteSample:
-      sampleName: '**\SQLiteSample.sln' 
+    # SQLiteSample:
+    #   sampleName: '**\SQLiteSample.sln' 
 
-    StatusBarColorSample:
-      sampleName: '**\StatusBarColorSample.sln' 
+    # StatusBarColorSample:
+    #   sampleName: '**\StatusBarColorSample.sln' 
 
-    TheCatApiClient:
-      sampleName: '**\TheCatApiClient.sln' 
+    # TheCatApiClient:
+    #   sampleName: '**\TheCatApiClient.sln' 
 
-    TimeEntryServices:
-      sampleName: '**\TimeEntryServices.sln' 
+    # TimeEntryServices:
+    #   sampleName: '**\TimeEntryServices.sln' 
 
-    TimeEntryUno:
-      sampleName: '**\TimeEntryUno.sln' 
+    # TimeEntryUno:
+    #   sampleName: '**\TimeEntryUno.sln' 
 
-    ToyCar:
-      sampleName: '**\ToyCar.sln' 
+    # ToyCar:
+    #   sampleName: '**\ToyCar.sln' 
 
-    UnoContoso:
-      sampleName: '**\UnoContoso.sln' 
+    # UnoContoso:
+    #   sampleName: '**\UnoContoso.sln' 
 
     UnoCupertinoSample:
       sampleName: '**\UnoCupertinoSample.sln' 
@@ -133,6 +133,6 @@ jobs:
       value: false
 
   steps:
-  - template: .vsts-ci.yml
+  - template: .BuildMatrix.yml
     parameters:
       arguments: ${{ parameters.sampleName }}
