ci: adding dependsOn

--- a/.azure-pipelines.BuildMatrix.yml
+++ b/.azure-pipelines.BuildMatrix.yml
@@ -1,4 +1,7 @@
 - job: Build Matrix
+  
+  dependsOn: VS_Latest
+
   strategy:
     matrix: $[ dependencies.VS_Latest.outputs['generateJson.samplesJson'] ]
 
