ci: trying with task

--- a/.azure-pipelines.BuildMatrix.yml
+++ b/.azure-pipelines.BuildMatrix.yml
@@ -1,8 +1,9 @@
 steps:
-  - strategy:
-    matrix: $[ dependencies.VS_Latest.outputs['generateJson.samplesJson'] ]
+  - task: Matrix Task
+    strategy:
+      matrix: $[ dependencies.VS_Latest.outputs['generateJson.samplesJson'] ]
 
-  steps:
-  - template: .BuildMatrix.yml
-    parameters:
-      solutionname: ${{ parameters.solutionname }}
+    steps:
+    - template: .BuildMatrix.yml
+      parameters:
+        solutionname: ${{ parameters.solutionname }}
