--- a/.azure-pipelines.BuildMatrix.yml
+++ b/.azure-pipelines.BuildMatrix.yml
@@ -2,8 +2,8 @@ jobs:
 - job: Strategy
   dependsOn: VS_Latest
   strategy:
-    #matrix: { "Commerce" : { "solutionname": "D:/a/1/s/reference/Commerce/Commerce.sln" } }
-    matrix: $[ dependencies.VS_Latest.outputs['generateJson.samplesJson'] ]
+    matrix: { "Commerce" : { "solutionname": "D:/a/1/s/reference/Commerce/Commerce.sln" } }
+    # matrix: $[ dependencies.VS_Latest.outputs['generateJson.samplesJson'] ]
 
   steps:
   - template: .BuildMatrix.yml
