--- a/.azure-pipelines.BuildMatrix.yml
+++ b/.azure-pipelines.BuildMatrix.yml
@@ -4,6 +4,10 @@ jobs:
   strategy:
     matrix: { "Commerce" : { "solutionname": "D:/a/1/s/reference/Commerce/Commerce.sln" } }
     # matrix: $[ dependencies.VS_Latest.outputs['generateJson.samplesJson'] ]
+  
+  variables:
+    - name: UseDotNetNativeToolchain
+      value: false
 
   steps:
   - template: .BuildMatrix.yml
