--- a/.azure-pipelines.BuildMatrix.yml
+++ b/.azure-pipelines.BuildMatrix.yml
@@ -1,8 +1,12 @@
 jobs:
 - job: Strategy
   dependsOn: VS_Latest
+  
   strategy:
-    matrix: { "Commerce" : { "solutionname": "D:/a/1/s/reference/Commerce/Commerce.sln" } }
+    matrix:
+      Commerce:
+        solutionname: 'D:/a/1/s/reference/Commerce/Commerce.sln'
+    #matrix: { "Commerce" : { "solutionname": "D:/a/1/s/reference/Commerce/Commerce.sln" } }
     # matrix: $[ dependencies.VS_Latest.outputs['generateJson.samplesJson'] ]
   
   variables:
