--- a/.azure-pipelines.BuildMatrix.yml
+++ b/.azure-pipelines.BuildMatrix.yml
@@ -4,7 +4,7 @@ jobs:
 
   strategy:
     matrix:
-      Commerce.sln:
+      Job1:
         solutionname: 'D:/a/1/s/reference/Commerce/Commerce.sln'
   
   variables:
