--- a/.azure-pipelines.BuildMatrix.yml
+++ b/.azure-pipelines.BuildMatrix.yml
@@ -1,10 +1,13 @@
 jobs:
 - job: Strategy
-  dependsOn: VS_Latest
+  dependsOn: VS_Latest`
+
+  pool:
+    vmImage: 'windows-2022'
 
   strategy:
     matrix:
-      Job1:
+      Commerce:
         solutionname: 'D:/a/1/s/reference/Commerce/Commerce.sln'
   
   variables:
