--- a/.azure-pipelines.BuildMatrix.yml
+++ b/.azure-pipelines.BuildMatrix.yml
@@ -6,9 +6,7 @@ jobs:
     vmImage: 'windows-2022'
 
   strategy:
-    matrix:
-      Commerce:
-        solutionname: 'D:/a/1/s/reference/Commerce/Commerce.sln'
+    matrix: { "Commerce" : { "solutionname": "D:/a/1/s/reference/Commerce/Commerce.sln" } }
   
   variables:
     - name: UseDotNetNativeToolchain
