--- a/.BuildMatrix.yml
+++ b/.BuildMatrix.yml
@@ -5,7 +5,6 @@ parameters:
 
 steps:
 - powershell: |
-      ${{ parameters.solutionname }}
       # Set-PSDebug -Trace 1
       
       # if($env:System_PullRequest_TargetBranch -eq $null) { $TargetBranch = "master" } else { $TargetBranch = $env:System_PullRequest_TargetBranch; }
@@ -14,7 +13,7 @@ steps:
       # # Only build if there a change in the solution path for the current PR, if we're not in a PR
       # if( ("$env:System_PullRequest_PullRequestId" -eq '') -or ($global:LASTEXITCODE -ne 0)) {
         
-      #   & $env:msbuildpath ${{ parameters.solutionname }} /r /p:Configuration=Release /p:WasmShellMonoRuntimeExecutionMode=Interpreter /p:AotAssemblies=false /p:PublishTrimmed=false /p:WasmShellILLinkerEnabled=false /ds ;
+      & $env:msbuildpath ${{ parameters.solutionname }} /r /p:Configuration=Release /p:WasmShellMonoRuntimeExecutionMode=Interpreter /p:AotAssemblies=false /p:PublishTrimmed=false /p:WasmShellILLinkerEnabled=false /ds ;
         
       #   if (($lastexitcode -ne 0)) {
       #     exit $lastexitcode
